--- a/frontend/src/components/Simulator/_simulator.scss
+++ b/frontend/src/components/Simulator/_simulator.scss
@@ -12,21 +12,8 @@
     grid-template-columns: 2fr 1fr;
     margin-right: 40px;
   }
-}
 
-.menu {
-  color: $text;
-  padding-left: 20px;
-  padding-right: 20px;
-
-  .header-text {
-    font-size: 1.125rem;
-    padding-left: 20px;
-    padding-right: 20px;
-
-    @include desktop {
-      margin-left: 60px;
-      margin-right: 60px;
-    }
+  @include large {
+    margin-right: 100px;
   }
 }
