--- a/frontend/src/components/Simulator/sass/_room.scss
+++ b/frontend/src/components/Simulator/sass/_room.scss
@@ -276,8 +276,67 @@
     }
 
     .window-wrapper {
-      top: 0;
       transform-origin: left top;
+      transform: rotateX(0deg) rotateY(135deg) translate(-100%, -100%)
+        translateY(-26.3983px);
+      -webkit-transform: rotateX(0deg) rotateY(135deg) translate(-100%, -100%)
+        translateY(-26.3983px);
+      -moz-transform: rotateX(0deg) rotateY(135deg) translate(-100%, -100%)
+        translateY(-26.3983px);
+      -ms-transform: rotateX(0deg) rotateY(135deg) translate(-100%, -100%)
+        translateY(-26.3983px);
+      -o-transform: rotateX(0deg) rotateY(135deg) translate(-100%, -100%)
+        translateY(-26.3983px);
+
+      img.window-closed {
+        width: 23px;
+        position: relative;
+        top: 66px;
+
+        @include desktop {
+          top: 100px;
+          width: 40px;
+        }
+      }
+
+      img.window-parcial {
+        width: 27px;
+        position: relative;
+        top: 65px;
+        left: -3px;
+
+        @include desktop {
+          width: 48px;
+          top: 100px;
+          left: -3px;
+        }
+      }
+
+      img.window-open {
+        width: 38px;
+        position: relative;
+        top: 58px;
+        left: -10px;
+
+        @include desktop {
+          width: 68px;
+          top: 93px;
+          left: -10px;
+        }
+      }
+
+      img.window-system {
+        width: 20px;
+        position: relative;
+        top: 45px;
+        left: 0px;
+
+        @include desktop {
+          width: 40px;
+          top: 60px;
+          left: 0px;
+        }
+      }
     }
   }
 }
