--- a/frontend/src/sass/_variables.scss
+++ b/frontend/src/sass/_variables.scss
@@ -1,6 +1,6 @@
 $primary: #ecf0f1;
-$secondary: #ed1b95;
-$third: #9d0a60;
+$secondary: #df3a8e;
+$third: #f85dad;
 $input-background: #dddfdf;
 $text: #727272;
 $background: $primary;
