Agrego el estilo de infectado

--- a/frontend/src/components/Simulator/sass/_room.scss
+++ b/frontend/src/components/Simulator/sass/_room.scss
@@ -40,7 +40,12 @@
     }
 
     .iso-element {
+      border-radius: 20px;
       background-color: $primary;
+      -webkit-border-radius: 20px;
+      -moz-border-radius: 20px;
+      -ms-border-radius: 20px;
+      -o-border-radius: 20px;
 
       .iso-box {
         position: absolute;
@@ -207,6 +212,10 @@
           left: 15px;
         }
       }
+    }
+
+    .iso-infected {
+      @include gradient;
     }
 
     .floor-shadow {
