--- a/frontend/src/components/Simulator/sass/_results.scss
+++ b/frontend/src/components/Simulator/sass/_results.scss
@@ -1,4 +1,5 @@
 .results-card {
+  z-index: 2;
   background: $primary;
   box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07),
     0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
@@ -17,6 +18,7 @@
   margin-top: 30px;
 
   .results-header {
+    z-index: 3;
     @include gradient;
     color: $primary;
     border-radius: 5px 5px 0 0;
