--- a/frontend/src/sass/_variables.scss
+++ b/frontend/src/sass/_variables.scss
@@ -4,3 +4,6 @@ $third: #f85dad;
 $input-background: #dddfdf;
 $text: #727272;
 $background: $primary;
+$ppmOK: #20c527;
+$ppmAlto: #eca622;
+$ppmPeligro: #c61f1f;
