--- a/frontend/src/components/Simulator/sass/_results.scss
+++ b/frontend/src/components/Simulator/sass/_results.scss
@@ -43,7 +43,6 @@
     color: $text;
     display: grid;
     grid-template-columns: 1fr;
-    gap: 1em;
     align-items: center;
 
     @include desktop {
@@ -51,6 +50,9 @@
     }
 
     .sensor-div {
+      margin-top: 50px;
+      padding: 30px;
+
       @include desktop {
         padding: 50px;
       }
@@ -59,7 +61,7 @@
         width: 250px;
 
         @include desktop {
-          width: 100%;
+          width: 250px;
         }
       }
     }
@@ -80,12 +82,21 @@
   .results-subtitle {
     font-size: 0.875rem;
     margin-bottom: 0;
+    padding-top: 15px;
+    @include desktop {
+    }
   }
 
   .results-ppm {
-    font-size: 5rem;
+    font-size: 4rem;
     margin-bottom: 0;
     margin-top: 0;
+    padding-bottom: 15px;
+
+    @include desktop {
+      font-size: 5rem;
+      padding-bottom: 5px;
+    }
   }
 
   .ppm-card {
@@ -105,11 +116,26 @@
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-bottom: 20px;
-    padding-top: 1px;
-    padding-bottom: 20px;
+
+    @include desktop {
+      margin-left: 10%;
+      margin-right: 10%;
+      margin-bottom: 20px;
+      padding-top: 1px;
+      padding-bottom: 20px;
+    }
+  }
+
+  .screen-result {
+    position: relative;
+    font-size: 0.875rem;
+    left: 0px;
+    color: $primary;
+
+    @include desktop {
+      font-size: 0.875rem;
+      top: 65px;
+    }
   }
 
   @include desktop {
