Agrego navigation y cambio estilos

--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -1,2 +1,3 @@
+@import "../components/Navigation/navigation";
 @import "../components/Header/header";
 @import "../components/Simulator/simulator";
