--- a/src/components/Navigation/_navigation.scss
+++ b/src/components/Navigation/_navigation.scss
@@ -14,9 +14,8 @@
   align-items: center;
   padding: 10px 1.5rem 10px 1.5rem;
   align-items: center;
-  z-index: 9;
-  position: fixed;
-  width: 100%;
+  position: relative;
+  z-index: 15;
   transition: all 0.1s ease-in;
   background-color: $primary;
   box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07),
@@ -30,11 +29,11 @@
     &:hover {
       opacity: 0.7;
     }
-    transform: translate(-50%);
-    -webkit-transform: translate(-50%);
-    -moz-transform: translate(-50%);
-    -ms-transform: translate(-50%);
-    -o-transform: translate(-50%);
+    transform: translate(0%);
+    -webkit-transform: translate(0%);
+    -moz-transform: translate(0%);
+    -ms-transform: translate(0%);
+    -o-transform: translate(0%);
   }
 
   &.scrolled {
