--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -862,7 +862,18 @@
 
 @media only screen and (min-width: 992px) {
   .results-card .results-subtitle {
-    margin-top: 10px;
+    margin-top: 15px;
+  }
+}
+
+.results-card .results-def {
+  font-size: 0.875rem;
+  margin-bottom: 0;
+}
+
+@media only screen and (min-width: 992px) {
+  .results-card .results-def {
+    margin-top: 5px;
   }
 }
 
@@ -901,7 +912,7 @@
     margin-right: 10%;
     margin-top: 10px;
     padding-top: 1px;
-    padding-bottom: 5px;
+    padding-bottom: 10px;
   }
 }
 
