--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -1,3 +1,4 @@
 @import "../components/Navigation/navigation";
 @import "../components/Header/header";
 @import "../components/Simulator/simulator";
+@import "../components/Information/information";
