--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -985,4 +985,41 @@
     margin-right: 100px;
   }
 }
+
+.info-container {
+  margin-top: 80px;
+  margin-left: 15px;
+  margin-right: 15px;
+  color: #727272;
+}
+
+@media only screen and (min-width: 768px) {
+  .info-container {
+    margin-left: 15%;
+    margin-right: 15%;
+  }
+}
+
+.post-container {
+  margin-bottom: 80px;
+  text-align: left;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+}
+
+.post-container .post-header .post-subtitle {
+  font-weight: 500;
+  font-size: 1rem;
+  margin-bottom: 0;
+}
+
+.post-container .post-header .post-title {
+  margin-top: 0;
+  font-size: 1.7rem;
+}
+
+.post-container .post-content .post-content-text {
+  font-size: 1.125rem;
+}
 /*# sourceMappingURL=main.css.map */
