--- a/src/components/Simulator/sass/_results.scss
+++ b/src/components/Simulator/sass/_results.scss
@@ -49,10 +49,14 @@
       0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
 
     .info-text {
-      padding-top: 5px;
-      padding-bottom: 5px;
       color: $text;
       font-size: 1.125rem;
+      padding: 10px;
+
+      @include desktop {
+        padding-top: 5px;
+        padding-bottom: 5px;
+      }
     }
   }
 
@@ -140,12 +144,14 @@
     background-color: $primary;
     color: $text;
     margin: 0;
-    margin-top: 5px;
+    margin-top: 15px;
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
+    padding-top: 1px;
+    padding-bottom: 15px;
 
     @include desktop {
       margin-left: 10%;
