--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -813,10 +813,16 @@
 }
 
 .results-card .results-footer .info-text {
-  padding-top: 5px;
-  padding-bottom: 5px;
   color: #727272;
   font-size: 1.125rem;
+  padding: 10px;
+}
+
+@media only screen and (min-width: 992px) {
+  .results-card .results-footer .info-text {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
 }
 
 .results-card .results-title {
@@ -918,12 +924,14 @@
   background-color: #ecf0f1;
   color: #727272;
   margin: 0;
-  margin-top: 5px;
+  margin-top: 15px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
+  padding-top: 1px;
+  padding-bottom: 15px;
 }
 
 @media only screen and (min-width: 992px) {
