--- a/src/components/Simulator/sass/_parameters.scss
+++ b/src/components/Simulator/sass/_parameters.scss
@@ -166,7 +166,43 @@
 }
 
 .slider-title {
-  font-size: 0.875rem;
+  font-size: 1rem;
+  color: $text;
+}
+
+.partial-results-div {
+  .partial-results-wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1em;
+  }
+
+  .ppmOK {
+    color: $ppmOK;
+  }
+
+  .ppmAlto {
+    color: $ppmAlto;
+  }
+
+  .ppmPeligro {
+    color: $ppmPeligro;
+  }
+
+  background-color: $primary;
+  box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07),
+    0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
+    0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275),
+    0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035),
+    0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725),
+    0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
+  border-radius: 5px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+
+  @include tablet {
+    margin: 15px;
+  }
 }
 
 .mask-selector-div {
