--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -685,6 +685,7 @@
   border-radius: 5px;
   padding-top: 15px;
   padding-bottom: 15px;
+  margin: 5px;
 }
 
 .partial-results-div .partial-results-wrapper {
