--- a/src/components/Simulator/sass/_results.scss
+++ b/src/components/Simulator/sass/_results.scss
@@ -9,16 +9,16 @@
     0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
   background-color: $primary;
   color: $text;
-  margin: 0;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-  margin-top: 30px;
 
   .results-header {
+    font-size: 0.875rem;
     z-index: 3;
+    max-height: 45px;
     @include gradient;
     color: $primary;
     border-radius: 5px 5px 0 0;
@@ -50,7 +50,7 @@
 
     .info-text {
       color: $text;
-      font-size: 1.125rem;
+      font-size: 0.7rem;
       padding: 10px;
 
       @include desktop {
@@ -72,22 +72,24 @@
     align-items: center;
 
     @include desktop {
-      grid-template-columns: 2fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
     }
 
     .sensor-div {
-      margin-top: 50px;
-      padding: 30px;
-
-      @include desktop {
-        padding: 50px;
-      }
+      margin-bottom: 35px;
 
       .sensor-img {
         width: 250px;
+        transform: translate(-10%, 10%);
 
         @include desktop {
-          width: 250px;
+          position: relative;
+          transform: translate(-10%, 10%);
+          width: 100px;
+          -webkit-transform: translate(-10%, 10%);
+          -moz-transform: translate(-10%, 10%);
+          -ms-transform: translate(-10%, 10%);
+          -o-transform: translate(-10%, 10%);
         }
       }
     }
@@ -122,12 +124,12 @@
   }
 
   .results-ppm {
-    font-size: 4rem;
+    font-size: 2rem;
     margin-bottom: 0;
     margin-top: 0;
 
     @include desktop {
-      font-size: 5rem;
+      font-size: 2rem;
       padding-bottom: 5px;
     }
   }
@@ -154,31 +156,28 @@
     padding-bottom: 15px;
 
     @include desktop {
-      margin-left: 10%;
-      margin-right: 10%;
-      margin-top: 10px;
-      padding-top: 1px;
-      padding-bottom: 10px;
+      margin: 5px;
+      padding: 10px;
+      min-height: 120px;
     }
   }
 
   .screen-result {
+    z-index: 20;
     position: relative;
     font-size: 0.875rem;
-    left: 150px;
+    left: 125px;
     color: $primary;
-    top: -190px;
+    top: -165px;
 
     @include desktop {
-      font-size: 0.875rem;
-      left: 0;
-      top: 65px;
+      font-size: 0.4rem;
+      left: 52px;
+      top: -65px;
     }
   }
 
   @include desktop {
-    margin-top: 60px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 50px;
   }
 }
