--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -20,6 +20,7 @@
 }
 
 .navbar-container .logo {
+  width: 100px;
   transform: translate(0%);
   -webkit-transform: translate(0%);
   -moz-transform: translate(0%);
