--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -3,6 +3,16 @@
   padding-left: 20px;
   padding-right: 20px;
 
+  .header-title {
+    font-size: 2.4rem;
+    margin-bottom: 10px;
+  }
+
+  .header-subtitle {
+    font-size: 1.2rem;
+    margin-top: 0;
+  }
+
   .header-text {
     font-size: 1.125rem;
     padding-left: 20px;
@@ -12,6 +22,13 @@
       margin-left: 60px;
       margin-right: 60px;
     }
+  }
+
+  .resaltado {
+    background: linear-gradient(to right, $third, $secondary);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 
   @include desktop {
