--- a/src/components/Simulator/sass/_room.scss
+++ b/src/components/Simulator/sass/_room.scss
@@ -237,6 +237,31 @@
         -2.8px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
     }
 
+    .floor-shadow-red {
+      box-shadow: -100px 100px 80px rgba(255, 0, 0, 0.2),
+        -41.8px 41.7776px 33.4221px rgba(255, 0, 0, 0.05),
+        -22.34px 22.3363px 17.869px rgba(255, 0, 0, 0.042),
+        -12.6px 12.5216px 10.0172px rgba(255, 0, 0, 0.035),
+        -6.7px 6.6501px 5.32008px rgba(255, 0, 0, 0.028),
+        -2.8px 2.76726px 2.21381px rgba(255, 0, 0, 0.02);
+    }
+    .floor-shadow-yellow {
+      box-shadow: -100px 100px 80px rgba(236, 166, 34, 0.4),
+        -41.8px 41.7776px 33.4221px rgba(236, 166, 34, 0.05),
+        -22.34px 22.3363px 17.869px rgba(236, 166, 34, 0.042),
+        -12.6px 12.5216px 10.0172px rgba(236, 166, 34, 0.035),
+        -6.7px 6.6501px 5.32008px rgba(236, 166, 34, 0.028),
+        -2.8px 2.76726px 2.21381px rgba(236, 166, 34, 0.02);
+    }
+    .floor-shadow-green {
+      box-shadow: -100px 100px 80px rgba(32, 197, 39, 0.2),
+        -41.8px 41.7776px 33.4221px rgba(32, 197, 39, 0.05),
+        -22.34px 22.3363px 17.869px rgba(32, 197, 39, 0.042),
+        -12.6px 12.5216px 10.0172px rgba(32, 197, 39, 0.035),
+        -6.7px 6.6501px 5.32008px rgba(32, 197, 39, 0.028),
+        -2.8px 2.76726px 2.21381px rgba(32, 197, 39, 0.02);
+    }
+
     .wall {
       position: absolute;
       display: flex;
