--- a/src/components/Simulator/sass/_results.scss
+++ b/src/components/Simulator/sass/_results.scss
@@ -86,10 +86,10 @@
   }
 
   .results-subtitle {
-    font-size: 0.875rem;
+    font-size: 0.7rem;
     margin-bottom: 0;
     @include desktop {
-      margin-top: 15px;
+      margin-top: 5px;
     }
   }
 
@@ -112,8 +112,16 @@
     }
   }
 
-  .alerta {
-    font-size: 2rem;
+  .iprob-footer {
+    font-size: 0.7rem;
+    padding-left: 10px;
+    padding-right: 10px;
+
+    @include desktop {
+      padding: 0;
+      font-size: 0.6rem;
+      margin-top: -17px;
+    }
   }
 
   .ppm-card {
