--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -995,13 +995,13 @@
 }
 
 .results-card .results-subtitle {
-  font-size: 0.875rem;
+  font-size: 0.7rem;
   margin-bottom: 0;
 }
 
 @media only screen and (min-width: 992px) {
   .results-card .results-subtitle {
-    margin-top: 15px;
+    margin-top: 5px;
   }
 }
 
@@ -1029,8 +1029,18 @@
   }
 }
 
-.results-card .alerta {
-  font-size: 2rem;
+.results-card .iprob-footer {
+  font-size: 0.7rem;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+@media only screen and (min-width: 992px) {
+  .results-card .iprob-footer {
+    padding: 0;
+    font-size: 0.6rem;
+    margin-top: -17px;
+  }
 }
 
 .results-card .ppm-card {
